<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_weight="1.6"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/f1_background1"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_default_user_head"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/textcolor"
            android:textSize="20dp"
            android:text="@string/user_phone"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    //第二部分
    <LinearLayout
        android:layout_weight="0.6"
        android:background="@color/f4_background2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_height="0dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <RadioButton

                style="@style/sale_style"
                android:drawableTop="@mipmap/ic_collection_goods"
                android:text="@string/user_xin"/>
            <RadioButton

                style="@style/sale_style"
                android:drawableTop="@mipmap/ic_collection_store"
                android:text="@string/user_dianpu"/>
            <RadioButton

                style="@style/sale_style"
                android:drawableTop="@mipmap/ic_user_footprint"
                android:text="@string/user_jiao"/>
        </RadioGroup>
    </LinearLayout>
    //第3部分
    <LinearLayout
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_user_order"/>
            <TextView
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:text="全部订单"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_normal_dot_left"/>
    </LinearLayout>

    //第4部分
    <LinearLayout
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="0dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >

            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_order_wait_pay"
                android:text="@string/user_pay"/>

            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_order_wait_drive"
                android:text="@string/user_drive"/>

            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_order_wait_receipt"
                android:text="@string/user_receipt"/>

            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_order_wait_comment"
                android:text="@string/user_comment"/>
            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_order_wait_refund"
                android:text="@string/user_refund"/>

        </RadioGroup>
    </LinearLayout>

    //第五部分
    <LinearLayout
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_user_property"/>
            <TextView
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:text="我的财产"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_normal_dot_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="0dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_property_money"
                android:text="@string/user_money"/>
            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_property_card"
                android:text="@string/user_card"/>
            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_property_vouchers"
                android:text="@string/user_vouchers"/>
            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_property_red"
                android:text="@string/user_red"/>
            <RadioButton
                style="@style/shou_style"
                android:drawableTop="@mipmap/ic_user_property_integral"
                android:text="@string/user_integral"/>

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_user_address"/>
            <TextView
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:text="@string/user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_normal_dot_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_user_setting"/>
            <TextView
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:text="@string/user_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_normal_dot_left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="0.8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"></LinearLayout>
</LinearLayout>
